--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
 	<meta content="zh-cn" http-equiv="Content-Language" />
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-	<title>Development and external validation of MRI measured fat and muscle volume prediction models in UK Biobank</title>
+	<title>Sex-specific equations to estimate body composition: derivation and validation of diagnostic prediction models using UK Biobank</title>
 	<link rel="stylesheet" href="static/css.css" media="all">
 	<style type="text/css">
 		.main-box{		
@@ -34,7 +34,7 @@
 <div class="main-box">
 <form class="basic-grey">
 	<h1>
-		Development and external validation of MRI measured fat and muscle volume prediction models in UK Biobank
+		Sex-specific equations to estimate body composition: derivation and validation of diagnostic prediction models using UK Biobank
 		<span>
 			Yueqi Lu<sup>1</sup><font style="position:relative;top:-2px;">*</font>, Ying Shan<sup>2</sup><font style="position:relative;top:-2px;">*</font>, Liang Dai<sup>2</sup>, Xiaosen Jiang<sup>1</sup>, Congying Song<sup>2</sup>, Bangwei Chen<sup>1</sup>, Jingwen Zhang<sup>3</sup>, Liuqiao Yang<sup>1</sup>, Jing Li<sup>3</sup>, Yue Zhang<sup>2</sup>, Junjie Xu<sup>2</sup>, Tao Li<sup>1</sup>, Zuying Xiong<sup>3</sup>, Yong Bai<sup>1</sup><font style="position:relative;top:-4px;">#</font>, Xiaoyan Huang<sup>3</sup><font style="position:relative;top:-3px;">#</font>.<br/><br/>
 <sup>1</sup>BGI-Shenzhen, Shenzhen, China<br/>
