--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 		</span>
 	</h1>
 	<div>
-		<a href="vat.html"><input type="button" class="button index-input" style="width:600px;text-align:left;" value="Visceral adipose tissue (VAT) volume estimation" /></a>
+		<a href="vat.html"><input type="button" class="button index-input" style="width:600px;text-align:left;" value="Visceral adipose tissue volume estimation(VAT)" /></a>
 		<br/>
-		<a href="asat.html"><input type="button" class="button index-input" style="width:600px;text-align:left;" value="Abdominal subcutaneous adipose tissue (ASAT) volume estimation" /></a>
+		<a href="asat.html"><input type="button" class="button index-input" style="width:600px;text-align:left;" value="Abdominal subcutaneous adipose tissue volume estimation(ASAT)" /></a>
 		<br/>
-		<a href="ffmv.html"><input type="button" class="button index-input" style="width:600px;text-align:left;" value="Thigh fat-free muscle (FFMV) volume estimation" /></a>
+		<a href="ffmv.html"><input type="button" class="button index-input" style="width:600px;text-align:left;" value="Thigh fat-free muscle volume estimation(FFMV)" /></a>
 	</div>
 </form>
 </div>
