--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 		</span>
 	</h1>
 	<div>
-		<a href="vat.html"><input type="button" class="button index-input" style="width:600px;text-align:left;" value="Visceral adipose tissue volume estimation(VAT)" /></a>
+		<a href="vat.html"><input type="button" class="button index-input" style="width:600px;text-align:left;" value="Visceral adipose tissue volume (VAT) estimation" /></a>
 		<br/>
-		<a href="asat.html"><input type="button" class="button index-input" style="width:600px;text-align:left;" value="Abdominal subcutaneous adipose tissue volume estimation(ASAT)" /></a>
+		<a href="asat.html"><input type="button" class="button index-input" style="width:600px;text-align:left;" value="Abdominal subcutaneous adipose tissue volume (ASAT) estimation" /></a>
 		<br/>
-		<a href="ffmv.html"><input type="button" class="button index-input" style="width:600px;text-align:left;" value="Thigh fat-free muscle volume estimation(FFMV)" /></a>
+		<a href="ffmv.html"><input type="button" class="button index-input" style="width:600px;text-align:left;" value="Total thigh fat-free muscle volume (FFMV) estimation" /></a>
 	</div>
 </form>
 </div>
