--- a/ffmv.html
+++ b/ffmv.html
@@ -22,7 +22,7 @@
 		<h1>		
 			FFMV volume estimation for male
 			<span style="color:red">
-				Age,height,weight are required. Others are optional. But more data filled in provides more accurate estimates.
+				Age,height,weight are required. Others are optional. But more data filled in provide more accurate estimates.
 			</span>
 		</h1>
 		<label>
@@ -99,7 +99,7 @@
 			<input id="man_Basal_metabolic_rate" type="number" name="man_Basal_metabolic_rate" placeholder="Basal metabolic rate(500~30000kJ)" min="500" max="30000" title="The basal metabolic rate must be between 500 and 30000"/>
 		</label>
 		<label>
-			<span style = "width:400px;text-align:left;margin:0 0 23px 12px;">* Bioelectrical impedance analysis (BIA) parameters</span>
+			<span style = "width:400px;text-align:left;margin:0 0 23px 12px;">* Derived from bioeletrical impedance analysis</span>
 		</label>
 		<label>
 			<input type="button" class="button" id="man_button" title="Please click the button to calculate" name="man_button" value="Calculate(please click)" onclick="getRisk('man')"/>
@@ -127,7 +127,7 @@
 		<h1>		
 			FFMV volume estimation for female
 			<span style="color:red">
-				Age,height,weight are required. Others are optional. But more data filled in provides more accurate estimates.
+				Age,height,weight are required. Others are optional. But more data filled in provide more accurate estimates.
 			</span>
 		</h1>
 		<label>
@@ -204,7 +204,7 @@
 			<input id="woman_Basal_metabolic_rate" type="number" name="woman_Basal_metabolic_rate" placeholder="Basal metabolic rate(500~30000kJ)" min="500" max="30000" title="The basal metabolic rate must be between 500 and 30000"/>
 		</label>
 		<label>
-			<span style = "width:400px;text-align:left;margin:0 0 23px 12px;">* Bioelectrical impedance analysis (BIA) parameters</span>
+			<span style = "width:400px;text-align:left;margin:0 0 23px 12px;">* Derived from bioeletrical impedance analysis</span>
 		</label>
 		<label>
 			<input type="button" class="button" title="Please click the button to calculate" id="wowoman_button" name="woman_button" value="Calculate(please click)" onclick="getRisk('woman')"/>
